# agentloop

./: .gitignore  Cargo.toml  README.md  agentloop.sh
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-01-agentloop-autonomous-app-builder.md  2026-06-02-live-progress-tracking.md  2026-06-02-rust-phase2-tui-inbox.md  (+11 more)
helpers/: yaml2json.py
lib/: config.sh  loop.sh  planner.sh  progress.sh  spawn.sh  state.sh  worker.sh  worktree.sh
scripts/: install.sh  tui_demo.sh
src/: app.rs  architect.rs  cli.rs  config.rs  customer.rs  events.rs  history.rs  inbox.rs  lib.rs  limits.rs  main.rs  manager.rs  orchestrator.rs  planner.rs  preflight.rs  requests.rs  spawn.rs  state.rs  task_state.rs  tui.rs  worker.rs  worktree.rs
templates/: config.yaml  master.md
tests/: cli_bootstrap_test.rs  cli_goal_test.rs  cli_rerun_test.rs  config_test.rs  fake_agent.sh  history_loop_test.rs  history_test.rs  inbox_test.rs  install_test.sh  lib.sh  loop_addtask_test.rs  loop_customer_test.rs  loop_dirty_gate_test.rs  loop_needs_input_test.rs  loop_no_change_test.rs  loop_repair_test.rs  loop_resolver_test.rs  loop_set_role_test.rs  loop_test.rs  planner_worker_test.rs  preflight_test.rs  requests_test.rs  roles_prompt_test.rs  run.sh  smoke_live.sh  spawn_test.rs  state_test.rs  task_state_test.rs  test_config.sh  test_loop.sh  test_loop_maxattempts.sh  test_loop_nocommit.sh  test_progress.sh  test_prompts.sh  test_spawn.sh  test_state.sh  test_worktree.sh  tui_helpers_test.rs  tui_render_test.rs  tui_viewmodel_test.rs  (+2 more)
tests/common/: mod.rs
(+7 files in other folders)
