[package]
name = "agentloop"
version = "0.1.1"
edition = "2021"

[lib]
name = "agentloop"
path = "src/lib.rs"

[[bin]]
name = "agentloop"
path = "src/main.rs"

[[bin]]
name = "fake_agent"
path = "src/bin/fake_agent.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "fs", "io-util", "signal", "sync"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
command-group = { version = "5", features = ["with-tokio"] }
nix = { version = "0.29", features = ["signal", "process"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ratatui = "0.29"
crossterm = "0.28"
